--- a/mysite/client/templates/US.html
+++ b/mysite/client/templates/US.html
@@ -12,22 +12,26 @@
 		{% if data.channel_title == None %}
 		{% else %}
 		<h1>These are the results for {{data.channel_title}}</h1>
-		<table class="table">
+		<table class="table" style="border-collapse: collapse;">
 			<thead class="thead-dark">
 			<tr>
 				<th> Video ID </th>
 				<th> Channel Title </th>
 				<th> Publish Time </th>
 				<th> Category ID </th>
-				<th> Tags </th>
+				<th> Trending Date </th>
+				<th> View Count </th>
+				<th> Likes </th>
+				<th> Dislikes </th>
+				<th> Comment Count </th>
 			</tr>
 			</thead>
 			<tbody>
-			<tr>
+			<tr style="border: none">
 			{% for value in search.values %}
-				<td>
+				<td style="border-right: solid 1px black; border-left: solid 1px black;">
 				{% for v in value %}
-					{{ v }}
+					{{ v }}<br>
 				{% endfor %}
 				</td>
 			{% endfor %}
