--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -20,6 +20,9 @@
       <li>
         <a class="nav-link" href="{% url 'avgPerCat' %}">Average Per Category(US)</a>
       </li>
+      <li>
+        <a class="nav-link" href="{% url 'top20MostLiked' %}">Top 20 Most Liked Videos(US)</a>
+      </li>
     </ul>
   </div>
 </nav>
