Added Home picture and working on Checkboxes for Country

--- a/mysite/client/templates/home.html
+++ b/mysite/client/templates/home.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block page_content %}
 	<div class='container'>
-		<h1>HOME SHIT</h1>
+		<h1>HOME</h1>
+		<img src="{% static 'mysite/images/Youtube.jpg' %}">
 	</div>
 {% endblock %}
