--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -10,29 +10,14 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'US' %}">By United States</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">By Country</a>
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Services</span> <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                <li><a href="#">Service A</a></li>
-                <li><a href="#">Service B</a></li>
-                <li class="dropdown-submenu">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <span class="nav-label">Service C</span><span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Service C1</a></li>
-                        <li><a href="#">Service C2</a></li>
-                        <li><a href="#">Service C3</a></li>
-                        <li><a href="#">Service C4</a></li>
-                        <li><a href="#">Service C5</a></li>
-                    </ul>
-                </li>
-            </ul>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'country' %}">By Country</a>
         </li>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">By Category</a>
       </li>
+      
     </ul>
   </div>
 </nav>
