--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -23,6 +23,9 @@
       <li>
         <a class="nav-link" href="{% url 'top20MostLiked' %}">Top 20 Most Liked Videos(US)</a>
       </li>
+      <li>
+        <a class="nav-link" href="{% url 'top20MostDisliked' %}">Top 20 Most Disliked Videos(US)</a>
+      </li>
     </ul>
   </div>
 </nav>
