--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -17,6 +17,20 @@
       <li class="nav-item">
         <a class="nav-link" href="#">By Category</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'analytics' %}">Analytics</a>
+      </li>
+      <div class="dropdown">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Analytics Dropdown
+      </a>
+
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item" href="#">Top 20 Most Liked videos</a>
+        <a class="dropdown-item" href="#">Top 20 Most Disliked videos</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+     </div>
+    </div>
       
     </ul>
   </div>
