Analytic Dropdown Menu works

--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -23,6 +23,17 @@
       <li>
         <a class="nav-link" href="{% url 'top20MostDisliked' %}">Top 20 Most Disliked Videos(US)</a>
       </li>
+      <div class="dropdown">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Analytics
+      </a>
+
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item" href="top_20_most_liked">Top 20 Most Liked videos</a>
+        <a class="dropdown-item" href="top_20_most_disliked">Top 20 Most Disliked videos</a>
+        <a class="dropdown-item" href="avg_per_cat">Average Per Category(US)</a>
+     </div>
+    </div>
 
     </ul>
   </div>
