--- a/mysite/client/templates/top20MostDisliked.html
+++ b/mysite/client/templates/top20MostDisliked.html
@@ -8,10 +8,10 @@
 	{{mostDislikedDiv}}
 	{% endautoescape %}
 </div>
-<div style="margin-top: 150px; margin-left: 300px; margin-right: 300px; margin-bottom: 50px; border: 3px; border-style: solid; border-color: #000000; padding: 1em;">
-	<h10>
-		Average Number of Dislikes
-	</h10>
+<div style="margin-top: 150px; margin-left: 700px; margin-right: 700px; margin-bottom: 150px; border: 5px; border-style: solid; border-color: #000000; padding: 1em; text-align: center">
+	<h5>
+		Average Number of Dislikes Per Video:
+	</h5>
 	<h1>
 		{{averageMostDislikes}}
 	</h1>
