--- a/mysite/client/templates/top20MostLiked.html
+++ b/mysite/client/templates/top20MostLiked.html
@@ -8,4 +8,12 @@
         {{mostLikedDiv}}
 		{% endautoescape %}
 	</div>
+	<div style="margin-top: 150px; margin-left: 700px; margin-right: 700px; margin-bottom: 150px; border: 5px; border-style: solid; border-color: #000000; padding: 1em; text-align: center">
+		<h5>
+			Average Number of Likes Per Video:
+		</h5>
+		<h1>
+			{{averageMostLikes}}
+		</h1>
+	</div>
 {% endblock %}
