Analytics for disabled sections work for US and Canada

--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -26,6 +26,9 @@
       <li>
         <a class="nav-link" href="{% url 'top20MostDisliked' %}">Top 20 Most Disliked Videos(US)</a>
       </li>
+      <li>
+        <a class="nav-link" href="{% url 'disabledCommentsAndRatings' %}">Countries w/ Most Disabled Comments and Ratings</a>
+      </li>
     </ul>
   </div>
 </nav>
