countries html is setup

--- a/mysite/client/templates/top20MostLiked.html
+++ b/mysite/client/templates/top20MostLiked.html
@@ -7,5 +7,6 @@
         {% autoescape off %}
         {{mostLikedDiv}}
 		{% endautoescape %}
+		<a href="{% url 'home' %}">Go back to home page</a>
 	</div>
 {% endblock %}
