--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -10,6 +10,10 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'US' %}">By United States</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'countries' %}">By Countries</a>
+      </li>
+      </li>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">By Category</a>
@@ -33,6 +37,7 @@
         <a class="dropdown-item" href="top_20_most_disliked">Top 20 Most Disliked videos</a>
         <a class="dropdown-item" href="avg_per_cat">Average Per Category(US)</a>
      </div>
+        <div class="clear"></div>
     </div>
 
     </ul>
