--- a/mysite/client/templates/countries.html
+++ b/mysite/client/templates/countries.html
@@ -13,7 +13,7 @@
 		</form>
 		{% if data.channel_title == None %}
 		{% else %}
-		<h1>These are the results for {{data.channel_title}}</h1>
+		<h1>These are the results for {{data.channel_title}} in {{data.country}}</h1>
 		<table class="table" style="border-collapse: collapse;">
 			<thead class="thead-dark">
 			<tr>
