Reworked paths to match my local machine

--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -27,6 +27,7 @@
         <a class="dropdown-item" href="{% url 'top20MostLiked' %}">Top 20 Most Liked videos</a>
         <a class="dropdown-item" href="{% url 'top20MostDisliked' %}">Top 20 Most Disliked videos</a>
         <a class="dropdown-item" href="{% url 'avgPerCat' %}">Average Per Category(US)</a>
+        <a class="dropdown-item" href="{% url 'disabledCommentsAndRatings' %}">Disabled Comments and Ratings</a>
      </div>
         <div class="clear"></div>
     </div>
