Almost done with Homepage

--- a/mysite/client/templates/home.html
+++ b/mysite/client/templates/home.html
@@ -10,7 +10,13 @@
 			<h3 style="text-align: center; font-size: 150%; font-family: Palatino Linotype, Palatino, serif;">CS180 - Hackerman</h3>
 			<button style="background-color:#350B0B; position:relative; left: 350px; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://www.kaggle.com/datasnaek/youtube-new'" type="button">
          		Data</button value="Submit">
-         	<button style="background-color:#350B0B; position:relative; left: 400px; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://www.kaggle.com/datasnaek/youtube-new'" type="button"> <i class="fab fa-github-alt"></i>
+         	<button style="background-color:#350B0B; position:relative; left: 400px; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://github.com/ucr-cs180-fall20/cs180project-021-hackerman/tree/main'" type="button"> <i class="fab fa-github-alt"></i>
          		Github</button value="Submit">
+         	<h4 style="text-align: center; position:relative; left:-50px; font-size: 150%; line-height: 10em; font-family: Palatino Linotype, Palatino, serif;"> Contributors: Alexander Ku, Chris Daniels, Christian Campos and Sameh Fazli</h4>
+         	<p style="text-align: center; font-size: 280%; font-family: Palatino Linotype, Palatino, serif;  line-height: 0em;">Technologies used</p>
+         	<i style="font-size: 600%; line-height: 1.5em; color: green;" class="fab fa-bootstrap"></i>
+         	<i style="font-size: 600%; line-height: 1.5em; position: relative; left: 200px; color: orange;" class="fab fa-html5"></i>
+         	<i style="font-size: 600%; line-height: 1.5em; position: relative; left: 400px; color: blue;" class="fab fa-python"></i>
+         	<i style="font-size: 600%; line-height: 1.5em; position: relative; left: 650px; color: red;" class="fab fa-js"></i>
 	</div>
 {% endblock %}
