Homepage GUI is done

--- a/mysite/client/templates/US.html
+++ b/mysite/client/templates/US.html
@@ -2,6 +2,7 @@
 
 {% block page_content %}
 	<div class='container'>
+		<body style="background-image: linear-gradient(to right, #445898 , #995A10);">
 		<h1>Trending videos on Youtube in the United States</h1>
 		<!-- FORM GOES HERE -->
 		<form method="GET">
