--- a/mysite/client/templates/home.html
+++ b/mysite/client/templates/home.html
@@ -1,22 +1,41 @@
 {% extends "base.html" %}
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-<i class="fab fa-youtube"></i>
 {% load static %}
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
+<i class="fab fa-youtube"></i>
 {% block page_content %}
-	<div class='container'>
+	<div class='container' style="overflow: hidden;">
 		<h1 style="text-align: center; font-size: 400%; font-family: Palatino Linotype, Palatino, serif; line-height: 4.5em;">Welcome to Youtube Trending Statistic</h1>
-		<body style="background-image: linear-gradient(to right, #1A81A5 , #7D1AA5);">
+		<body style="background-image: linear-gradient(to right, #445898 , #995A10);">
 			<h2 style="text-align: center; font-size: 150%; font-family: Palatino Linotype, Palatino, serif;">This is our website which allows you to find youtube statistics</h2>
 			<h3 style="text-align: center; font-size: 150%; font-family: Palatino Linotype, Palatino, serif;">CS180 - Hackerman</h3>
 			<button style="background-color:#350B0B; position:relative; left: 350px; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://www.kaggle.com/datasnaek/youtube-new'" type="button">
          		Data</button value="Submit">
          	<button style="background-color:#350B0B; position:relative; left: 400px; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://github.com/ucr-cs180-fall20/cs180project-021-hackerman/tree/main'" type="button"> <i class="fab fa-github-alt"></i>
          		Github</button value="Submit">
-         	<h4 style="text-align: center; position:relative; left:-50px; font-size: 150%; line-height: 10em; font-family: Palatino Linotype, Palatino, serif;"> Contributors: Alexander Ku, Chris Daniels, Christian Campos and Sameh Fazli</h4>
-         	<p style="text-align: center; font-size: 280%; font-family: Palatino Linotype, Palatino, serif;  line-height: 0em;">Technologies used</p>
-         	<i style="font-size: 600%; line-height: 1.5em; color: green;" class="fab fa-bootstrap"></i>
-         	<i style="font-size: 600%; line-height: 1.5em; position: relative; left: 200px; color: orange;" class="fab fa-html5"></i>
-         	<i style="font-size: 600%; line-height: 1.5em; position: relative; left: 400px; color: blue;" class="fab fa-python"></i>
-         	<i style="font-size: 600%; line-height: 1.5em; position: relative; left: 650px; color: red;" class="fab fa-js"></i>
+         	<h4 style="text-align: center; position:relative; left:-50px; font-size: 150%; line-height: 5em; font-family: Palatino Linotype, Palatino, serif;"> Contributors: Alexander Ku, Chris Daniels, Christian Campos and Sameh Fazli</h4>
+         	<p style="text-align: center; font-size: 280%; font-family: Palatino Linotype, Palatino, serif;  line-height: 2em;">Technologies used</p>
+         	<figure>
+         		<h4 style="font-size: 150%; line-height: 1.0em; color: black; position: relative; bottom: -14px; left: 190px; text-decoration: underline;">Front-end</h4>
+         		<h5 style="font-size: 150%; line-height: 0.05em; color: black; position: relative; bottom: 4.55px; left: 760px; text-decoration: underline;">Back-end</h5>
+         	<i style="font-size: 600%; line-height: 1.5em; color: green; position: relative; bottom: -1px; left: -10px;" class="fab fa-bootstrap"></i>
+         	<figcaption style="font-size: 150%; line-height: 0.6em; color: black; position: relative; bottom: 0px; left: -17px;"> Bootstrap</figcaption>
+         	</figure> 
+         	<figure>
+         	<i style= "font-size: 600%; line-height: 1.5em; position: relative; bottom: 172px; left: 200px; color: orange;" class ="fab fa-html5"></i>
+         	  <figcaption style= "font-size: 150%; line-height: 0.6em; position: relative; bottom: 172px; left: 200px; color: black;" >HTML5</figcaption>
+         	</figure>
+    		<figure>
+         	<i style="font-size: 600%; line-height: 1.5em; position: relative; bottom: 345px; left: 400px; color: red;" class="fab fa-js"></i>
+         	  <figcaption style= "font-size: 150%; line-height: 0em; position: relative; bottom: 337px; left: 385px; color: black;" >Javascript</figcaption>
+         	</figure>
+         	<figure>
+         		<i style="font-size: 600%; line-height: 1.5em; position: relative; bottom: 500px; left: 630px; color: blue;" class="fab fa-python"></i>
+         		<figcaption style="font-size: 150%; line-height: 0em; position: relative; bottom: 495px; left: 632px; color: black;"> Python</figcaption>
+         	</figure>
+         	<figure>
+         		<img src="https://img.icons8.com/material-two-tone/96/000000/django.png" style="position: relative; bottom: 630px; left: 880px;" />
+         		<figcaption style="font-size: 150%; line-height: 0em; position: relative; bottom: 605px; left: 890px; color: black;"> Django</figcaption>
+         	</figure>
 	</div>
 {% endblock %}
