--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #271909;">
   <span style="font-size: 2em; color: Tomato;">
     <i class="fab fa-youtube"></i>
   </span>
-  <a class="navbar-brand" href="{% url 'home' %}">Trending Youtube</a>
+  <a class="navbar-brand" href="{% url 'home' %}" style="color: #F6F6F1">Trending Youtube</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -15,18 +15,18 @@
   </span>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'US' %}">United States</a>
+        <a class="nav-link" href="{% url 'US' %}" style="color: #F6F6F1">United States</a>
       </li>
         <span style="font-size: 1em; color: Blue;">
           <i class="fas fa-globe"></i></a>
         </span>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'countries' %}">Countries</a>
+        <a class="nav-link" href="{% url 'countries' %}" style="color: #F6F6F1">Countries</a>
       </li>
       </li>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">By Category</a>
+        <a class="nav-link" href="#" style="color: #F6F6F1">By Category</a>
       </li>
       <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
