Prepping Most Popular Category function to take in results based on country

--- a/mysite/client/templates/mostPopularCategory.html
+++ b/mysite/client/templates/mostPopularCategory.html
@@ -5,7 +5,7 @@
         <h1>Most Popular Category Per Country</h1>
         <!-- CHARTS GO HERE -->
         {% autoescape off %}
-        {{viewsDiv}}
+        {{viewsDivUS}}
         {% endautoescape %}
     </div>
 {% endblock %} 
