Canada added to Most Popular Category analytics

--- a/mysite/client/templates/mostPopularCategory.html
+++ b/mysite/client/templates/mostPopularCategory.html
@@ -6,6 +6,7 @@
         <!-- CHARTS GO HERE -->
         {% autoescape off %}
         {{viewsDivUS}}
+        {{viewsDivCA}}
         {% endautoescape %}
     </div>
 {% endblock %} 
