--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -17,7 +17,7 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'US' %}" style="color: #F6F6F1">United States</a>
       </li>
-        <span style="font-size: 1em; color: Blue;">
+        <span style="font-size: 1em; color: #15FCEE; position: absolute; position: relative; top: 10px; left: 0px; ">
           <i class="fas fa-globe"></i></a>
         </span>
       <li class="nav-item">
@@ -29,13 +29,12 @@
         <a class="nav-link" href="#" style="color: #F6F6F1">By Category</a>
       </li>
       <div class="dropdown">
-      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #271909;">
         Analytics
       </a>
-      <i class="fas fa-analytics"></i>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <a class="dropdown-item" href="top_20_most_liked"> 
-          <span style="font-size: 25px; color: Blue;">
+          <span style="font-size: 25px; color: #00F9E9;">
         <i class="fas fa-thumbs-up"></i>
       </span>Top 20 Most Liked videos</a>
         <a class="dropdown-item" href="top_20_most_disliked"> 
