--- a/mysite/client/templates/mostPopularCategory.html
+++ b/mysite/client/templates/mostPopularCategory.html
@@ -7,6 +7,8 @@
         {% autoescape off %}
         {{viewsDivUS}}
         {{viewsDivCA}}
+        {{viewsDivDE}}
+        {{viewsDivGB}}
         {% endautoescape %}
     </div>
 {% endblock %} 
