Added Background colors to other pages

--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -2,10 +2,10 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #271909;">
-  <span style="font-size: 2em; color: Tomato;">
+  <span style="font-size: 2em; color: #E11010;">
     <i class="fab fa-youtube"></i>
   </span>
-  <a class="navbar-brand" href="{% url 'home' %}" style="color: #F6F6F1">Trending Youtube</a>
+  <a class="navbar-brand" href="{% url 'home' %}" style="color: #F6F6F1">Youtube Trending</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
