--- a/mysite/client/templates/home.html
+++ b/mysite/client/templates/home.html
@@ -7,13 +7,12 @@
 	<div class='container' style="overflow: hidden;">
 		<h1 style="text-align: center; font-size: 400%; font-family: Palatino Linotype, Palatino, serif; line-height: 4.5em; color: white;">Welcome to Youtube Trending Statistic</h1>
 		<body style="background-image: linear-gradient(to right, #445898 , #995A10);">
-			<h2 style="text-align: center; font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white;">This is our website which allows you to find youtube statistics</h2>
-			<h3 style="text-align: center; font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white;">CS180 - Hackerman</h3>
+			<h2 style="text-align: center; font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; position: relative; bottom: 40px; left: 50px;">This is our website which allows you to find youtube statistics</h2>
+			<h3 style="text-align: center; font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; position: relative; bottom: 20px; left: 20px; ">CS180 - Hackerman</h3>
 			<button style="background-color:#050000; position:relative; left: 350px; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://www.kaggle.com/datasnaek/youtube-new'" type="button">
          		Data</button value="Submit">
          	<button style="background-color:#050000; position:relative; left: 400px; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://github.com/ucr-cs180-fall20/cs180project-021-hackerman/tree/main'" type="button"> <i class="fab fa-github-alt"></i>
          		Github</button value="Submit">
-         	<h4 style="text-align: center; position:relative; left:-50px; font-size: 150%; line-height: 5em; font-family: Palatino Linotype, Palatino, serif; color: white;"> Contributors: Alexander Ku, Chris Daniels, Christian Campos and Sameh Fazli</h4>
          	<p style="text-align: center; font-size: 280%; font-family: Palatino Linotype, Palatino, serif;  line-height: 2em; color: white;">Technologies used</p>
          	<figure>
          		<h4 style="font-size: 150%; line-height: 1.0em; color: white; position: relative; bottom: -14px; left: 190px; text-decoration: underline;">Front-end</h4>
