Added more Icons

--- a/mysite/client/templates/avgPerCat.html
+++ b/mysite/client/templates/avgPerCat.html
@@ -2,7 +2,8 @@
 
 {% block page_content %}
 	<div class='container'>
-		<h1>Average likes/dislikes/views per category in the USA.</h1>
+		<body style="background-image: linear-gradient(to right, #445898 , #995A10);">
+		<h1 style="color: white;">Average likes/dislikes/views per category in the USA</h1>
 		<!-- CHARTS GO HERE -->
 		{% autoescape off %}
 		{{likes_div}}
