--- a/mysite/client/templates/disabledCommentsAndRatings.html
+++ b/mysite/client/templates/disabledCommentsAndRatings.html
@@ -2,14 +2,15 @@
 
 {% block page_content %}
 <div class='container', style="margin-bottom: 250px">
-	<h1>Percentage of Countries That Have Their Comments Sections Disabled</h1>
+	<body style="background-image: linear-gradient(to right, #445898 , #995A10);">
+	<h1 style="color: white;">Percentage of Countries That Have Their Comments Sections Disabled</h1>
 	<!-- CHARTS GO HERE -->
 	{% autoescape off %}
 	{{disabledCommentsFig}}
 	{% endautoescape %}
 </div>
 <div class='container', style="margin-bottom: 150px">
-	<h1>Percentage of Countries That Have Their Ratings Bars Disabled</h1>
+	<h1 style="color: white;">Percentage of Countries That Have Their Ratings Bars Disabled</h1>
 	<!-- CHARTS GO HERE -->
 	{% autoescape off %}
 	{{disabledRatingsFig}}
