--- a/mysite/client/templates/mostPopularCategory.html
+++ b/mysite/client/templates/mostPopularCategory.html
@@ -2,7 +2,8 @@
 
 {% block page_content %}
     <div class='container'>
-        <h1>Most Popular Category Per Country</h1>
+        <body style="background-image: linear-gradient(to right, #445898 , #995A10);">
+        <h1 style="color: white;">Most Popular Category Per Country</h1>
         <!-- CHARTS GO HERE -->
         {% autoescape off %}
         {{viewsDivUS}}
