--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -28,6 +28,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#" style="color: #F6F6F1">By Category</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'modifyDataset' %}" style="color: #F6F6F1">Modify Dataset</a>
+      </li>
       <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #271909;">
         Analytics
