Delete function works now.

--- a/mysite/client/templates/countries.html
+++ b/mysite/client/templates/countries.html
@@ -15,7 +15,7 @@
 		</form>
 		{% if data.channel_title == None %}
 		{% else %}
-		<h1 style="color: white;">These are the results for {{data.channel_title}} in {{data.country}}</h1>
+		<h1 style="color: white;">There are {{size}} results for {{data.channel_title}} in {{data.country}}</h1>
 		<table class="table" style="border-collapse: collapse; color: white;">
 			<thead class="thead-dark">
 			<tr>
