--- a/mysite/client/templates/home.html
+++ b/mysite/client/templates/home.html
@@ -2,7 +2,6 @@
 {% load static %}
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
-<i class="fab fa-youtube"></i>
 {% block page_content %}
 	<div class='container' style="overflow: hidden;">
 		<h1 style="text-align: center; font-size: 400%; font-family: Palatino Linotype, Palatino, serif; line-height: 4.5em; color: white;">Welcome to Youtube Trending Statistic</h>
@@ -18,7 +17,7 @@
          		<h4 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 1.0em; color: white; position: relative; bottom: -14px; left: 190px; text-decoration: underline;">Front-end</h4>
          		<h5 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.05em; color: white; position: relative; bottom: 4.55px; left: 760px; text-decoration: underline;">Back-end</h5>
          	<i style="font-size: 600%; line-height: 1.5em; color: green; position: relative; bottom: -1px; left: -10px;" class="fab fa-bootstrap"></i>
-         	<figcaption style="font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.6em; color: white; position: relative; bottom: 0px; left: -17px;"> Bootstrap</figcaption>
+         	<figcaption style="font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.6em; color: white; position: relative; bottom: 0px; left: -17px;">Bootstrap</figcaption>
          	</figure> 
          	<figure>
          	<i style= "font-size: 600%; line-height: 1.5em; position: relative; bottom: 172px; left: 200px; color: orange;" class ="fab fa-html5"></i>
@@ -36,6 +35,6 @@
          		<img src="https://img.icons8.com/material-two-tone/96/000000/django.png" style="position: relative; bottom: 630px; left: 880px;" />
          		<figcaption style="font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0em; position: relative; bottom: 605px; left: 890px; color: white;"> Django</figcaption>
          	</figure>
-         	<h6 style="font-family: Palatino Linotype, Palatino, serif; color: white; font-size: 200%; text-align: center; line-height: 1em; position: relative; bottom: 459px; left: 10px;">Created by: Alexander Ku, Chris Daniels, Christain Campos and Sameh Fazli</h6>
+         	<h6 style="font-family: Palatino Linotype, Palatino, serif; color: white; font-size: 200%; text-align: center; line-height: 1em; position: relative; bottom: 459px; left: 10px;">Created by: Alexander Ku, Chris Daniels, Christian Campos and Sameh Fazli</h6>
 	</div>
 {% endblock %}
