--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -10,13 +10,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <span style="font-size: 1em; color: Red;">
-    <i class="fas fa-flag-usa"></i>
   </span>
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'US' %}" style="color: #F6F6F1">United States</a>
-      </li>
         <span style="font-size: 1em; color: #15FCEE; position: absolute; position: relative; top: 10px; left: 0px; ">
           <i class="fas fa-globe"></i></a>
         </span>
@@ -26,7 +21,7 @@
       </li>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" style="color: #F6F6F1">By Category</a>
+        <a class="nav-link" href="{% url 'about' %}" style="color: #F6F6F1; position: relative; bottom: 0px; left: 1500px;">About</a>
       </li>
       <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #271909;">
@@ -41,7 +36,10 @@
           <span style="font-size: 25px; color: #FF2019;">
         <i class="fas fa-thumbs-down"></i> 
       </span>Top 20 Most Disliked videos</a> 
-        <a class="dropdown-item" href="{% url 'avgPerCat' %}">Average Per Category(US)</a>
+        <a class="dropdown-item" href="{% url 'avgPerCat' %}">
+        <span style="font-size: 25px; color: #EE1313">
+          <i class="fas fa-flag-usa"></i>
+        </span>Average Per Category(US)</a>
         <a class="dropdown-item" href="{% url 'disabledCommentsAndRatings' %}">
           <span style="font-size: 25px; color: #00F0FF">
             <i class="fas fa-comments"></i>
@@ -51,6 +49,7 @@
           <i class="fas fa-globe"></i>
         </span>Most Popular Category Per Country</a>
         <div class="clear"></div>
+      </li>
     </div>
     </ul>
   </div>
