Set up Trending Stats tab on navbar

--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -29,6 +29,9 @@
         <a class="nav-link" href="#" style="color: #F6F6F1">By Category</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#" style="color: #F6F6F1">Trending Stats</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="{% url 'modifyDataset' %}" style="color: #F6F6F1">Modify Dataset</a>
       </li>
       <div class="dropdown">
