About page created

--- a/mysite/client/templates/about.html
+++ b/mysite/client/templates/about.html
@@ -5,15 +5,38 @@
 {% block page_content %}
 	<div class='container' style="overflow: hidden;">
       <body style="background-image: linear-gradient(to right, #445898 , #995A10);">
-         <h1>Team Members</h1>
+         <h1 style="text-align: center; font-family: Palatino Linotype, Palatino, serif;">Team Members</h1>
          <div>
+            <div class="person person-photos"> 
+               <img src="https://www.geekasia.com/wp-content/uploads/2018/05/art-roy-e1525529816402-596x350.jpg" alt="Mountain" style="width:600px">
+               <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 190px; line-height: 1.0em;">Alexander Ku</h2>
+               <h4 style="font-family: Palatino Linotype, Palatino, serif; color: blue; position: relative; bottom: 10px; left: 220px; line-height: 1.0em;">Back-End</h4>
+               <button style="background-color:#050000; position:relative; left: 160px; bottom: 10px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none;" onclick="location.href='https://github.com/deadmemeconnoisseur42'" type="button"> <i class="fab fa-github-alt"></i>
+               Github</button value="Submit">
+            </div>
             <div class="person person-photos">
-               <img class="img-fluid" src="https://www.google.com/search?q=fire+emblem&tbm=isch&chips=q:fire+emblem,g_1:robin:k4r52NxPeaA%3D&hl=en&sa=X&ved=2ahUKEwidpZbTxITtAhXvATQIHcQmCGMQ4lYoA3oECAEQGw&biw=1905&bih=968#imgrc=3wtVYwjYjVYO5M" alt="Back-End">
-               <h2>Alexander Ku</h2>
-               <h4>Back-End</h4>
-               <div class="social">
-                  <a href="https://github.com/deadmemeconnoisseur42" class="icon-github" target="_blank"></a>
-               </div>
+                <img src="https://cdn.discordapp.com/attachments/761707638131523606/778811798206808064/https3A2F2Fspecials-images.png" alt="Mountain" style="width: 400px; position: relative; left: 635px; line-height: 1.0em; bottom: 465px;">
+                <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 720px; bottom: 470px;">Christain Campos</h2>
+                <h4 style="font-family: Palatino Linotype, Palatino, serif; color: blue; position: relative; bottom: 480px; left: 770px; line-height: 1.0em;">Back-End</h4>
+                <button style="background-color:#050000; position:relative; left: 730px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; bottom: 488px;" onclick="location.href='https://github.com/ccamp032'" type="button"> <i class="fab fa-github-alt"></i>
+               Github</button value="Submit">
+            </div>
+            <div class="person person-photos">
+               <img src="https://avatars1.githubusercontent.com/u/19229124?s=460&u=d98831706311ca2f43bbf12187119ff62d80bd18&v=4" alt="Mountain" style="width: 400px; position: relative; left: 100px; bottom: 420px;">
+               <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 200px; bottom: 410px;">Chris Daniels</h2>
+               <h4 style="font-family: Palatino Linotype, Palatino, serif; color: blue; position: relative; bottom: 420px; left: 230px; line-height: 1.0em;">Back-End</h4>
+               <button style="background-color:#050000; position:relative; left: 180px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; bottom: 430px;" onclick="location.href='https://github.com/ChairMane?tab=repositories'" type="button"> <i class="fab fa-github-alt"></i>
+               Github</button value="Submit">
+            </div>
+            <div>
+               <img src="https://brokeassstuart.com/wp-content/pictsnShit/2020/06/guy-fieri.jpg" alt="Mountain" style="width: 400px; position: relative; left: 560px; bottom: 810px;">
+               <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 695px; bottom: 810px;">Sameh Fazli</h2>
+               <h4 style="font-family: Palatino Linotype, Palatino, serif; color: blue; position: relative; bottom: 820px; left: 710px; line-height: 1.0em;">Front-End</h4>
+               <button style="background-color:#050000; position:relative; left: 680px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; bottom: 810px;" onclick="location.href='https://github.com/sfazli96?tab=repositories'" type="button"> <i class="fab fa-github-alt"></i>
+               Github</button value="Submit">
+            </div>
          </div>
+
 	</div>
 {% endblock %}
+
