About Us page almost done

--- a/mysite/client/templates/about.html
+++ b/mysite/client/templates/about.html
@@ -8,10 +8,10 @@
          <h1 style="text-align: center; font-family: Palatino Linotype, Palatino, serif;">Team Members</h1>
          <div>
             <div class="person person-photos"> 
-               <img src="https://www.geekasia.com/wp-content/uploads/2018/05/art-roy-e1525529816402-596x350.jpg" alt="Mountain" style="width:600px">
-               <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 190px; line-height: 1.0em;">Alexander Ku</h2>
-               <h4 style="font-family: Palatino Linotype, Palatino, serif; color: blue; position: relative; bottom: 10px; left: 220px; line-height: 1.0em;">Back-End</h4>
-               <button style="background-color:#050000; position:relative; left: 160px; bottom: 10px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none;" onclick="location.href='https://github.com/deadmemeconnoisseur42'" type="button"> <i class="fab fa-github-alt"></i>
+               <img src="https://cdn.discordapp.com/attachments/768921039412396052/778859174854524928/IMG_20180812_193316_538.jpg" alt="Mountain" style="width:400px">
+               <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 110px; line-height: 1.0em;">Alexander Ku</h2>
+               <h4 style="font-family: Palatino Linotype, Palatino, serif; color: blue; position: relative; bottom: 10px; left: 150px; line-height: 1.0em;">Back-End</h4>
+               <button style="background-color:#050000; position:relative; left: 110px; bottom: 10px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none;" onclick="location.href='https://github.com/deadmemeconnoisseur42'" type="button"> <i class="fab fa-github-alt"></i>
                Github</button value="Submit">
             </div>
             <div class="person person-photos">
@@ -22,7 +22,7 @@
                Github</button value="Submit">
             </div>
             <div class="person person-photos">
-               <img src="https://avatars1.githubusercontent.com/u/19229124?s=460&u=d98831706311ca2f43bbf12187119ff62d80bd18&v=4" alt="Mountain" style="width: 400px; position: relative; left: 100px; bottom: 420px;">
+               <img src="https://cdn.discordapp.com/attachments/768921039412396052/778861712605577216/unknown.png" alt="Mountain" style="width: 400px; position: relative; left: 100px; bottom: 420px;">
                <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 200px; bottom: 410px;">Chris Daniels</h2>
                <h4 style="font-family: Palatino Linotype, Palatino, serif; color: blue; position: relative; bottom: 420px; left: 230px; line-height: 1.0em;">Back-End</h4>
                <button style="background-color:#050000; position:relative; left: 180px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; bottom: 430px;" onclick="location.href='https://github.com/ChairMane?tab=repositories'" type="button"> <i class="fab fa-github-alt"></i>
@@ -35,6 +35,7 @@
                <button style="background-color:#050000; position:relative; left: 680px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; bottom: 810px;" onclick="location.href='https://github.com/sfazli96?tab=repositories'" type="button"> <i class="fab fa-github-alt"></i>
                Github</button value="Submit">
             </div>
+            
          </div>
 
 	</div>
