Animation background for Homepage is done

--- a/mysite/client/templates/home.html
+++ b/mysite/client/templates/home.html
@@ -35,5 +35,9 @@
          		<img src="https://img.icons8.com/material-two-tone/96/000000/django.png" style="position: relative; bottom: 630px; left: 880px;" />
          		<figcaption style="font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0em; position: relative; bottom: 605px; left: 890px; color: white;"> Django</figcaption>
          	</figure>
+         	<link href="{% static 'css/main.css' %}" rel="stylesheet">
+         	<div class="bg"></div>
+			<div class="bg bg2"></div>
+			<div class="bg bg3"></div>
 	</div>
 {% endblock %}
