Added CSS to homepage

--- a/mysite/client/templates/home.html
+++ b/mysite/client/templates/home.html
@@ -21,7 +21,7 @@
          	</figure> 
          	<figure>
          	<i style= "font-size: 600%; line-height: 1.5em; position: relative; bottom: 172px; left: 200px; color: orange;" class ="fab fa-html5"></i>
-         	  <figcaption style= "font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.6em; position: relative; bottom: 172px; left: 197px; color: white;" >HTML5</figcaption>
+         	  <figcaption style= "font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.6em; position: relative; bottom: 172px; left: 177px; color: white;" >HTML5/CSS</figcaption>
          	</figure>
     		<figure>
          	<i style="font-size: 600%; line-height: 1.5em; position: relative; bottom: 345px; left: 400px; color: red;" class="fab fa-js"></i>
