Added Background color to mostCommented pg

--- a/mysite/client/templates/about.html
+++ b/mysite/client/templates/about.html
@@ -29,7 +29,7 @@
                Github</button value="Submit">
             </div>
             <div>
-               <img src="https://brokeassstuart.com/wp-content/pictsnShit/2020/06/guy-fieri.jpg" alt="Mountain" style="width: 400px; position: relative; left: 560px; bottom: 810px;">
+               <img src="https://cdn.discordapp.com/attachments/761707638131523606/779567185777262602/IMG_4351.JPG" alt="Mountain" style="width: 300px; position: relative; left: 620px; bottom: 810px;">
                <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 695px; bottom: 810px;">Sameh Fazli</h2>
                <h4 style="font-family: Palatino Linotype, Palatino, serif; color: blue; position: relative; bottom: 820px; left: 710px; line-height: 1.0em;">Front-End</h4>
                <button style="background-color:#050000; position:relative; left: 680px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; bottom: 810px;" onclick="location.href='https://github.com/sfazli96?tab=repositories'" type="button"> <i class="fab fa-github-alt"></i>
