--- a/mysite/client/templates/home.html
+++ b/mysite/client/templates/home.html
@@ -12,7 +12,7 @@
          		Dataset</button value="Submit">
          	<button style="background-color:#050000; position:relative; left: 400px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://github.com/ucr-cs180-fall20/cs180project-021-hackerman/tree/main'" type="button"> <i class="fab fa-github-alt"></i>
          		Github</button value="Submit">
-         	<p style="text-align: center; font-size: 280%; font-family: Palatino Linotype, Palatino, serif;  line-height: 2em; color: white;">Technologies used</p>
+         	<p style="text-align: center; font-size: 280%; font-family: Palatino Linotype, Palatino, serif;  line-height: 2em; color: white; position: relative; bottom: 0px; left: 25px;">Technologies used</p>
          	<figure>
          		<h4 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 1.0em; color: white; position: relative; bottom: -14px; left: 190px; text-decoration: underline;">Front-end</h4>
          		<h5 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.05em; color: white; position: relative; bottom: 4.55px; left: 760px; text-decoration: underline;">Back-end</h5>
